cmake_minimum_required(VERSION 3.9)
project(CPlusPlusPrimer)

set(CMAKE_CXX_STANDARD 11)

add_executable(CPlusPlusPrimer main.cpp chapter03/Chapter03.h util.h chapter03/Chapter03.cpp chapter04/chapter04.h chapter04/chapter04.cpp chapter05/chapter05.h chapter05/chapter05.cpp chapter06/chapter06.h chapter06/chapter06.cpp chapter07/chapter07.h chapter07/chapter07.cpp chapter07/ex07_32.h chapter07/ex07_41.h chapter07/ex07_43.h chapter07/ex07_41.cpp chapter07/ex07_50.h chapter07/ex07_57.h chapter08/ex08_04.h chapter08/ex08_04.cpp chapter08/ex08_05.h chapter08/ex08_05.cpp chapter08/ex08_13.h)
